--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/_mocha test/**/*.js -R spec"
   },
+  "engines" : { "node" : ">=0.10.3" },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Aigeec/jscs-md-reporter.git"
